Updated netlify script

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.2.0"
   },
   "scripts": {
+    "netlify": "yarn && yarn build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
