--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emoji-search",
+  "name": "",
   "version": "0.1.0",
   "license": "MIT",
   "homepage": "http://ahfarmer.github.io/emoji-search",
