--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "emoji-search",
   "version": "0.1.0",
   "license": "MIT",
-  "homepage": "http://ahfarmer.github.io/emoji-search",
   "devDependencies": {
     "gh-pages": "^1.1.0",
     "prettier": "^1.13.0",
@@ -15,7 +14,7 @@
     "react-dom": "^16.2.0"
   },
   "scripts": {
-    "netlify": "yarn && yarn build",
+    "netlify": "cd public && yarn && yarn build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
